# ops

./: .gitignore  Cargo.toml  Cargo.toml.wstemplate  README.md  TEST_CATALOG.md  test_macro_fix.rs  test_progress.rs  version.txt
.ws/: project.db  state.json
archive/: audit_trail.rs  compensating_ops.rs  emergency_rollback.rs  entity_management.rs  hierarchical_ops.rs  infrastructure_state.rs  json_ops.rs  metrics.rs  op_state.rs  persistence.rs  resilience.rs  resource_mgmt.rs  rollback.rs  safe_point.rs  state_machine.rs  stateful.rs
examples/: batch_data_flow_demo.rs  batch_macro_demo.rs  break_loop_demo.rs  complete_metadata_demo.rs  composable_macros.rs  content_selection_fixed.rs  content_selection_with_break.rs  context_macros_complete.rs  continue_on_error_comparison.rs  continue_on_error_demo.rs  control_flow_demo.rs  custom_rollback.rs  daisy_chain_demo.rs  debug_filesystem_ref.rs  dry_wet_context_demo.rs  listing_outline_extraction.rs  loop_macro_demo.rs  loop_rollback.rs  loop_simple_demo.rs  macro_demo.rs  macro_usage_demo.rs  nested_loop_scoped_control.rs  reference_context_demo.rs  repeat_dynamic_limit_demo.rs  repeat_macro_rollback.rs  scoped_composable_final.rs  solution_summary.rs  table_of_contents_extraction.rs  unified_requirements_demo.rs
src/: audit_trail.rs  batch.rs  batch_metadata.rs  compensating_ops.rs  context.rs  contexts.rs  control_flow_tests.rs  emergency_rollback.rs  entity_management.rs  error.rs  failure.rs  hierarchical_ops.rs  html_ops.rs  infrastructure_state.rs  json_ops.rs  lib.rs  loop_op.rs  macros.rs  metrics.rs  op.rs  op_metadata.rs  op_state.rs  operation.rs  ops.rs  persistence.rs  resilience.rs  resource_mgmt.rs  rollback.rs  safe_point.rs  state_machine.rs  stateful.rs  structured_queries.rs
src/trigger/: engine.rs  mod.rs  registry.rs
src/trigger/predicates/: inline.rs  mod.rs
src/wrappers/: logging.rs  mod.rs  timeout.rs  validating.rs
tests/: integration_tests.rs  macro_tests.rs
