[package]
name = "ops"
version = "0.1.0"
edition = "2021"
description = "A Rust ops framework with composable wrappers and batch execution"
license = "MIT"
keywords = ["ops", "async", "execution", "framework"]
categories = ["development-tools"]



[dependencies]
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
paste = "1.0"
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
