[package]
name = "ops"
version = "0.1.0"
edition = "2021"
description = "A Rust ops framework with composable wrappers and batch execution"
license = "MIT"
keywords = ["ops", "async", "execution", "framework"]
categories = ["development-tools"]

[features]
default = []
html-parsing = []



[dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
paste = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
futures = "0.3"
jsonschema = "0.18"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
