[dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
jsonschema = "0.18"
paste = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.tokio]
features = ["full"]
version = "1.0"

[dependencies.tracing-subscriber]
features = ["env-filter", "fmt"]
version = "0.3"

[dependencies.uuid]
features = ["v4", "serde"]
version = "1.0"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"

[features]
default = []
html-parsing = []

[package]
categories = ["development-tools"]
description = "A Rust ops framework with composable wrappers and batch execution"
edition = "2021"
keywords = ["ops", "async", "execution", "framework"]
license = "MIT"
name = "ops"
version = "0.46.47419"
